CS_CB_20_10_01 추가

--- a/content/html/guide/guide_form.html
+++ b/content/html/guide/guide_form.html
@@ -47,7 +47,7 @@
 					<label for="chk1_1" class="lbl">체크박스</label>
 				</span>
 			</div> -->
-			<h4 class="gd__h3">small</h4>
+			<h4 class="gd__h3">large</h4>
 			<span class="checkbox small">
 				<input type="checkbox" id="chk11"><i aria-hidden="true"></i>
 				<label for="chk11" class="lbl">체크박스</label>
@@ -331,19 +331,19 @@
 				<div class="chk_item">
 					<div class="checkbox">
 						<input type="checkbox" id="agree"><i aria-hidden="true"></i>
-						<label for="agree" class="lbl">무슨 무슨 전체약관1</label>
+						<label for="agree" class="lbl">전체동의</label>
 						<a href="#" class="chk_link toggle open"><span class="blind">약관목록 확인하기</span></a>
 					</div>
 					<div class="chk_child">
 						<div class="checkbox">
 							<input type="checkbox" id="agree1_1"><i aria-hidden="true"></i>
-							<label for="agree1_1" class="lbl">무슨 무슨 약관1</label>
-							<a href="#" class="chk_link"><span class="blind">무슨 무슨 약관1 확인하기</span></a>
+							<label for="agree1_1" class="lbl">[필수]서비스 이용약관</label>
+							<a href="#" class="chk_link"><span class="blind">서비스 이용약관 확인하기</span></a>
 						</div>
 						<div class="checkbox">
 							<input type="checkbox" id="agree1_2"><i aria-hidden="true"></i>
-							<label for="agree1_2" class="lbl">무슨 무슨 약관2</label>
-							<a href="#" class="chk_link"><span class="blind">무슨 무슨 약관2 확인하기</span></a>
+							<label for="agree1_2" class="lbl">[필수]개인정보수집 및 이용동의</label>
+							<a href="#" class="chk_link"><span class="blind">개인정보수집 및 이용동의 확인하기</span></a>
 						</div>
 					</div>
 				</div>
