--- a/content/html/cs/CS_CB_20_10_01.html
+++ b/content/html/cs/CS_CB_20_10_01.html
@@ -16,7 +16,7 @@
 <div id="container">
 	<section id="contents">
 		<div class="section">
-			<div class="term_info_box verify">웹사이트 및 앱에서 본인 명의의<br />신용/체크카드 정보를 통해 본인임을<br />확인하는 서비스입니다.</div>
+			<div class="term_info_box verify">웹사이트 및 앱에서 본인 명의의<br>신용/체크카드 정보를 통해 본인임을<br>확인하는 서비스입니다.</div>
 			<hr class="hr_line" aria-hidden="true">
 			<h2 class="tit_h2">카드본인확인 비밀번호 설정</h2>
 			<div class="checkbox small">
