체크박스 수정

--- a/content/html/cs/CS_CB_20_10_01.html
+++ b/content/html/cs/CS_CB_20_10_01.html
@@ -16,7 +16,7 @@
 <div id="container">
 	<section id="contents">
 		<div class="section">
-			<div class="term_info_box verify">웹사이트 및 앱에서 본인 명의의<br>신용/체크카드 정보를 통해 본인임을<br>확인하는 서비스입니다.</div>
+			<div class="term_info_box">웹사이트 및 앱에서 본인 명의의<br>신용/체크카드 정보를 통해 본인임을<br>확인하는 서비스입니다.</div>
 			<hr class="hr_line" aria-hidden="true">
 			<h2 class="tit_h2">카드본인확인 비밀번호 설정</h2>
 			<div class="checkbox small">
@@ -31,23 +31,23 @@
 			<h2 class="tit_h2">약관동의</h2>
 			<div class="chk_list">
 				<div class="chk_item">
-					<div class="checkbox">
+					<div class="checkbox large">
 						<input type="checkbox" id="agree1"><i aria-hidden="true"></i>
 						<label for="agree1" class="lbl">전체동의</label>
 						<a href="#" class="chk_link toggle open"><span class="blind">약관목록 확인하기</span></a>
 					</div>
 					<div class="chk_child">
-						<div class="checkbox">
+						<div class="checkbox large">
 							<input type="checkbox" id="agree1_1"><i aria-hidden="true"></i>
 							<label for="agree1_1" class="lbl">[필수]서비스 이용약관</label>
 							<a href="#" class="chk_link"><span class="blind">서비스 이용약관 확인하기</span></a>
 						</div>
-						<div class="checkbox">
+						<div class="checkbox large">
 							<input type="checkbox" id="agree1_2"><i aria-hidden="true"></i>
 							<label for="agree1_2" class="lbl">[필수]개인정보수집 및 이용동의</label>
 							<a href="#" class="chk_link"><span class="blind">개인정보수집 및 이용동의 확인하기</span></a>
 						</div>
-						<div class="checkbox">
+						<div class="checkbox large">
 							<input type="checkbox" id="agree1_3"><i aria-hidden="true"></i>
 							<label for="agree1_3" class="lbl">[필수]고유실별정보 처리동의</label>
 							<a href="#" class="chk_link"><span class="blind">고유실별정보 처리동의 확인하기</span></a>
@@ -57,7 +57,7 @@
 			</div>
 			<div class="btn_wrap bottom_fixed">
 				<div class="flex">
-					<button href="#" class="button h54 blue" disabled>다음</button> <!-- disabled속성 추가:비활성, disabled속성 제거:활성-->
+					<button type="button" class="button h54 blue" disabled>다음</button><!-- disabled속성 추가:버튼 비활성, disabled속성 제거:버튼 활성-->
 				</div>
 			</div>
 		</div>
