--- a/content/html/cs/CS_CB_20_30_01.html
+++ b/content/html/cs/CS_CB_20_30_01.html
@@ -19,8 +19,8 @@
 			<div class="min_height_btn-104"></div>
 			<div class="btn_wrap">
 				<div class="flex">
-					<button href="#" class="button line blue">비밀번호 변경</button>
-					<button href="#" class="button blue">홈으로</button>
+					<a href="#" class="button line blue">비밀번호 변경</a>
+					<a href="#" class="button blue">홈으로</a>
 				</div>
 			</div>
 		</div>
