--- a/content/html/cs/CS_CB_40_10_01.html
+++ b/content/html/cs/CS_CB_40_10_01.html
@@ -22,8 +22,8 @@
 				이용하실 수 없습니다.<br><br>그래도 해지 하시겠습니까?</div>
 			<div class="btn_wrap">
 				<div class="flex">
-					<button href="#" class="button line blue">취소</button>
-					<button href="#" class="button blue">서비스 해지</button>
+					<a href="#" class="button line blue">취소</a>
+					<a href="#" class="button blue">서비스 해지</a>
 				</div>
 			</div>
 			<div class="txt_list box">
