--- a/content/html/cs/CS_CB_50_10_01.html
+++ b/content/html/cs/CS_CB_50_10_01.html
@@ -44,7 +44,7 @@
 
 			<div class="btn_wrap bottom_fixed">
 				<div class="flex">
-					<button href="#" class="button h54 blue">카드본인확인 인증</button>
+					<a href="#" class="button h54 blue">카드본인확인 인증</a>
 				</div>
 			</div>
 		</div>
