--- a/content/html/cs/CS_CB_50_30_01.html
+++ b/content/html/cs/CS_CB_50_30_01.html
@@ -56,7 +56,7 @@
 
 			<div class="btn_wrap bottom_fixed">
 				<div class="flex">
-					<button href="#" class="button h54 blue">확인</button>
+					<a href="#" class="button h54 blue">확인</a>
 				</div>
 			</div>
 		</div>
