--- a/content/html/cs/CS_CB_30_10_01.html
+++ b/content/html/cs/CS_CB_30_10_01.html
@@ -41,7 +41,7 @@
 			</div>
 			<div class="btn_wrap bottom_fixed">
 				<div class="flex">
-					<button href="#" class="button h54 blue">등록</button>
+					<button type="button" class="button h54 blue" disabled>등록</button><!-- disabled속성 추가:버튼 비활성, disabled속성 제거:버튼 활성-->
 				</div>
 			</div>
 		</div>
