--- a/content/html/cs/CS_CB_40_20_01.html
+++ b/content/html/cs/CS_CB_40_20_01.html
@@ -18,7 +18,7 @@
 		<div class="section">
 			<div class="btn_wrap bottom_fixed">
 				<div class="flex">
-					<button href="#" class="button h54 blue">홈으로 이동</button>
+					<a href="#" class="button h54 blue">홈으로 이동</a>
 				</div>
 			</div>
 		</div>
