--- a/content/html/guide/guide_form.html
+++ b/content/html/guide/guide_form.html
@@ -28,7 +28,7 @@
 				<input type="checkbox" id="chk1"><i aria-hidden="true"></i>
 				<label for="chk1" class="lbl">체크박스</label>
 			</span>
-			<span class="checkbox ml10">
+			<span class="checkbox">
 				<input type="checkbox" id="chk2" checked><i aria-hidden="true"></i>
 				<label for="chk2" class="lbl">체크박스 checked</label>
 			</span>
@@ -37,7 +37,7 @@
 				<input type="checkbox" id="chk3" disabled><i aria-hidden="true"></i>
 				<label for="chk3" class="lbl">체크박스 disabled</label>
 			</span>
-			<span class="checkbox ml10">
+			<span class="checkbox">
 				<input type="checkbox" id="chk4" disabled checked><i aria-hidden="true"></i>
 				<label for="chk4" class="lbl">체크박스 disabled checked</label>
 			</span>
@@ -48,20 +48,20 @@
 				</span>
 			</div> -->
 			<h4 class="gd__h3">large</h4>
-			<span class="checkbox small">
+			<span class="checkbox large">
 				<input type="checkbox" id="chk11"><i aria-hidden="true"></i>
 				<label for="chk11" class="lbl">체크박스</label>
 			</span>
-			<span class="checkbox small ml10">
+			<span class="checkbox large">
 				<input type="checkbox" id="chk12" checked><i aria-hidden="true"></i>
 				<label for="chk12" class="lbl">체크박스 checked</label>
 			</span>
 			<br>
-			<span class="checkbox small">
+			<span class="checkbox large">
 				<input type="checkbox" id="chk13" disabled><i aria-hidden="true"></i>
 				<label for="chk13" class="lbl">체크박스 disabled</label>
 			</span>
-			<span class="checkbox small ml10">
+			<span class="checkbox large">
 				<input type="checkbox" id="chk14" disabled checked><i aria-hidden="true"></i>
 				<label for="chk14" class="lbl">체크박스 disabled checked</label>
 			</span>
@@ -72,7 +72,7 @@
 				<input type="radio" id="rdo1" name="rdo1"><i aria-hidden="true"></i>
 				<label for="rdo1" class="lbl">라디오</label>
 			</span>
-			<span class="radio ml10">
+			<span class="radio">
 				<input type="radio" id="rdo2" name="rdo1" checked><i aria-hidden="true"></i>
 				<label for="rdo2" class="lbl">라디오 checked</label>
 			</span>
@@ -81,7 +81,7 @@
 				<input type="radio" id="rdo3" name="rdo3" disabled><i aria-hidden="true"></i>
 				<label for="rdo3" class="lbl">라디오 disabled</label>
 			</span>
-			<span class="radio ml10">
+			<span class="radio">
 				<input type="radio" id="rdo4" name="rdo3" disabled checked><i aria-hidden="true"></i>
 				<label for="rdo4" class="lbl">라디오 disabled checked</label>
 			</span>
@@ -91,21 +91,21 @@
 					<label for="rdo1_1" class="lbl">라디오</label>
 				</span>
 			</div> -->
-			<h4 class="gd__h3">small</h4>
-			<span class="radio small">
+			<h4 class="gd__h3">large</h4>
+			<span class="radio large">
 				<input type="radio" id="rdo11" name="rdo11"><i aria-hidden="true"></i>
 				<label for="rdo11" class="lbl">라디오</label>
 			</span>
-			<span class="radio small ml10">
+			<span class="radio large">
 				<input type="radio" id="rdo12" name="rdo11" checked><i aria-hidden="true"></i>
 				<label for="rdo12" class="lbl">라디오 checked</label>
 			</span>
 			<br>
-			<span class="radio small">
+			<span class="radio large">
 				<input type="radio" id="rdo13" name="rdo13" disabled><i aria-hidden="true"></i>
 				<label for="rdo13" class="lbl">라디오 disabled</label>
 			</span>
-			<span class="radio small ml10">
+			<span class="radio large">
 				<input type="radio" id="rdo14" name="rdo13" disabled checked><i aria-hidden="true"></i>
 				<label for="rdo14" class="lbl">라디오 disabled checked</label>
 			</span>
@@ -329,18 +329,18 @@
 			<h3 class="gd__h2">chk_list</h3>
 			<div class="chk_list">
 				<div class="chk_item">
-					<div class="checkbox">
+					<div class="checkbox large">
 						<input type="checkbox" id="agree"><i aria-hidden="true"></i>
 						<label for="agree" class="lbl">전체동의</label>
 						<a href="#" class="chk_link toggle open"><span class="blind">약관목록 확인하기</span></a>
 					</div>
 					<div class="chk_child">
-						<div class="checkbox">
+						<div class="checkbox large">
 							<input type="checkbox" id="agree1_1"><i aria-hidden="true"></i>
 							<label for="agree1_1" class="lbl">[필수]서비스 이용약관</label>
 							<a href="#" class="chk_link"><span class="blind">서비스 이용약관 확인하기</span></a>
 						</div>
-						<div class="checkbox">
+						<div class="checkbox large">
 							<input type="checkbox" id="agree1_2"><i aria-hidden="true"></i>
 							<label for="agree1_2" class="lbl">[필수]개인정보수집 및 이용동의</label>
 							<a href="#" class="chk_link"><span class="blind">개인정보수집 및 이용동의 확인하기</span></a>
@@ -348,18 +348,18 @@
 					</div>
 				</div>
 				<div class="chk_item">
-					<div class="checkbox">
+					<div class="checkbox large">
 						<input type="checkbox" id="agree2"><i aria-hidden="true"></i>
 						<label for="agree2" class="lbl">무슨 무슨 전체약관2</label>
 						<a href="#" class="chk_link toggle open"><span class="blind">약관목록 확인하기</span></a>
 					</div>
 					<div class="chk_child agree_child">
-						<div class="checkbox">
+						<div class="checkbox large">
 							<input type="checkbox" id="agree2_1"><i aria-hidden="true"></i>
 							<label for="agree2_1" class="lbl">무슨 무슨 약관1</label>
 							<a href="#" class="chk_link"><span class="blind">무슨 무슨 약관1 확인하기</span></a>
 						</div>
-						<div class="checkbox">
+						<div class="checkbox large">
 							<input type="checkbox" id="agree2_2"><i aria-hidden="true"></i>
 							<label for="agree2_2" class="lbl">무슨 무슨 약관2</label>
 							<a href="#" class="chk_link"><span class="blind">무슨 무슨 약관2 확인하기</span></a>
