--- a/content/html/guide/guide_txt.html
+++ b/content/html/guide/guide_txt.html
@@ -142,6 +142,9 @@
 			<h3 class="gd__h2">i_ico_20</h3>
 			<i class="i_ico_20 ico_1" aria-hidden="true"></i>
 			<i class="i_ico_20 ico_2" aria-hidden="true"></i>
+			
+			<h3 class="gd__h2">i_ico_88</h3>
+			<i class="i_ico_88 ico_1" aria-hidden="true"></i>
 
 			<h2 class="gd__h1">텍스트 리스트</h2>
 			<h3 class="gd__h2">dot</h3>
