컨텐츠 추가(완료페이지)

--- a/content/html/cs/CS_CB_50_30_01.html
+++ b/content/html/cs/CS_CB_50_30_01.html
@@ -16,6 +16,11 @@
 <div id="container">
 	<section id="contents">
 		<div class="section">
+			<div class="complete_wrap">
+				<i class="i_ico_50 ico_1" aria-hidden="true"></i>
+				<h2 class="tit_h2">인증 완료</h2>
+				<p class="txt">카드본인확인 인증이 완료되었습니다.</p>
+			</div>
 			<div class="table">
 				<table>
 					<caption>인증완료정보</caption>
