--- a/content/html/cs/CS_CB_20_20_01.html
+++ b/content/html/cs/CS_CB_20_20_01.html
@@ -28,7 +28,7 @@
 			<div class="form_item">
 				<label for="pwd" class="fm_lb">비밀번호</label>
 				<div class="fm_cont">
-					<div class="input"><input type="password" id="pwd"" placeholder="6자리입력"></div>
+					<div class="input"><input type="password" id="pwd" placeholder="6자리입력"></div>
 					<div class="error_txt">비밀번호를 입력해주세요.</div><!-- 에러메세지 입력영역 -->
 				</div>
 			</div>
