--- a/content/html/cs/CS_CB_20_30_01.html
+++ b/content/html/cs/CS_CB_20_30_01.html
@@ -16,7 +16,14 @@
 <div id="container" class="bg_gray">
 	<section id="contents">
 		<div class="section">
-			<div class="min_height_btn-104"></div>
+			<div class="min_height_btn-104">
+				<div class="complete_wrap">
+					<i class="i_ico_50 ico_1" aria-hidden="true"></i>
+					<h2 class="tit_h2">신청 완료</h2>
+					<p class="txt">카드본인확인 서비스 신청이 완료되었습니다.<br />카드본인확인 시 비밀번호는<br />결제비밀번호와 동일하게 선택하셨습니다.</p>
+					<span class="caution_txt">변경을 원할 경우,<br /><span class="fc_blue">카드본인확인 비밀번호 변경</span> 메뉴를 이용주세요.</span>
+				</div>
+			</div>
 			<div class="btn_wrap">
 				<div class="flex">
 					<a href="#" class="button line blue">비밀번호 변경</a>
