--- a/content/html/cs/CS_CB_20_30_02.html
+++ b/content/html/cs/CS_CB_20_30_02.html
@@ -16,6 +16,14 @@
 <div id="container" class="bg_gray">
 	<section id="contents">
 		<div class="section">
+			<div class="min_height_btn-104">
+				<div class="complete_wrap">
+					<i class="i_ico_50 ico_1" aria-hidden="true"></i>
+					<h2 class="tit_h2">신청 완료</h2>
+					<p class="txt">카드본인확인 서비스 신청 및<br />카드비밀번호 등록이 완료되었습니다.</p>
+					<span class="caution_txt">안전한 이용을 위해 본인확인 비밀번호는<br /><span class="fc_blue">90일마다 변경</span>해 주세요.</span>
+				</div>
+			</div>
 			<div class="btn_wrap bottom_fixed">
 				<div class="flex">
 					<a href="#" class="button h54 blue">홈으로 이동</a>
