--- a/content/html/cs/CS_CB_40_20_01.html
+++ b/content/html/cs/CS_CB_40_20_01.html
@@ -16,6 +16,14 @@
 <div id="container" class="bg_gray">
 	<section id="contents">
 		<div class="section">
+			<div class="min_height_btn-104">
+				<div class="complete_wrap">
+					<i class="i_ico_50 ico_1" aria-hidden="true"></i>
+					<h2 class="tit_h2">해지 완료</h2>
+					<p class="txt">올원페이 간편인증 카드본인확인 서비스가<br />정상적으로 해지되었습니다.</p>
+					<span class="caution_txt">카드본인확인 서비스는<br /><span class="fc_blue">[고객센터 &gt; 카드본인확인 서비스]</span>를 통해<br />다시 이용할 수 있습니다.</span>
+				</div>
+			</div>
 			<div class="btn_wrap bottom_fixed">
 				<div class="flex">
 					<a href="#" class="button h54 blue">홈으로 이동</a>
