컨텐츠 수정(완료페이지)

--- a/content/html/cs/CS_CB_20_10_01.html
+++ b/content/html/cs/CS_CB_20_10_01.html
@@ -18,7 +18,7 @@
 		<div class="section">
 			<div class="service_info">
 				<i class="i_ico_88 ico_1" aria-hidden="true"></i>
-				<p>웹사이트 및 앱에서 본인 명의의<br />신용/체크카드 정보를 통해 본인임을<br />확인하는 서비스입니다.</p>
+				<p class="txt">웹사이트 및 앱에서 본인 명의의<br />신용/체크카드 정보를 통해 본인임을<br />확인하는 서비스입니다.</p>
 			</div>
 			<hr class="hr_line" aria-hidden="true">
 			<h2 class="tit_h2">카드본인확인 비밀번호 설정</h2>
