불필요 이미지 삭제

--- a/content/html/cs/CS_CB_50_10_01.html
+++ b/content/html/cs/CS_CB_50_10_01.html
@@ -41,6 +41,18 @@
 				</table>
 			</div>
 			<h2 class="tit_h2">결제카드 선택</h2>
+			<ul>
+				<li>
+					<div class="checkbox large">
+						<input type="checkbox" id="chk2_1"><i aria-hidden="true"></i>
+						<label for="chk2_1" class="lbl">
+							<div>
+								
+							</div>
+						</label>
+					</div>
+				</li>
+			</ul>
 
 			<div class="btn_wrap bottom_fixed">
 				<div class="flex">
