--- a/content/html/cs/CS_CB_50_10_01.html
+++ b/content/html/cs/CS_CB_50_10_01.html
@@ -41,16 +41,42 @@
 				</table>
 			</div>
 			<h2 class="tit_h2">결제카드 선택</h2>
-			<ul>
+			<ul class="list_ty1">
 				<li>
-					<div class="checkbox large">
-						<input type="checkbox" id="chk2_1"><i aria-hidden="true"></i>
-						<label for="chk2_1" class="lbl">
+					<div class="checkbox large"><input type="radio" id="cardChk1" name="cardChk" checked><i aria-hidden="true"></i></div>
+					<label for="cardChk1" class="inner">
+						<div class="card_info_tbl">
+							<div class="img"><img src="../../images/temp/card_228_144.png" alt="NH올원(SHOPPING&11번가)카드(R1타입)"></div>
 							<div>
-								
+								<div class="tit">NH올원(SHOPPING&11번가)카드(R1타입)</div>
+								<div class="sub">9411-****-****-3136</div>
 							</div>
-						</label>
-					</div>
+						</div>
+					</label>
+				</li>
+				<li>
+					<div class="checkbox large"><input type="radio" id="cardChk2" name="cardChk"><i aria-hidden="true"></i></div>
+					<label for="cardChk2" class="inner">
+						<div class="card_info_tbl">
+							<div class="img"><img src="../../images/temp/card_228_144.png" alt="NH올원(SHOPPING&11번가)카드(R1타입)"></div>
+							<div>
+								<div class="tit">NH올원(SHOPPING&11번가)카드(R1타입)</div>
+								<div class="sub">9411-****-****-3136</div>
+							</div>
+						</div>
+					</label>
+				</li>
+				<li>
+					<div class="checkbox large"><input type="radio" id="cardChk3" name="cardChk"><i aria-hidden="true"></i></div>
+					<label for="cardChk3" class="inner">
+						<div class="card_info_tbl">
+							<div class="img"><img src="../../images/temp/card_228_144.png" alt="NH올원(SHOPPING&11번가)카드(R1타입)"></div>
+							<div>
+								<div class="tit">NH올원(SHOPPING&11번가)카드(R1타입)</div>
+								<div class="sub">9411-****-****-3136</div>
+							</div>
+						</div>
+					</label>
 				</li>
 			</ul>
 
