공지사항 작업중

--- a/html/cs/CS_CB_50_10_01.html
+++ b/html/cs/CS_CB_50_10_01.html
@@ -41,44 +41,46 @@
 				</table>
 			</div>
 			<h2 class="tit_h2">결제카드 선택</h2>
-			<ul class="list_ty1">
-				<li>
-					<div class="checkbox large"><input type="radio" id="cardChk1" name="cardChk" checked><i aria-hidden="true"></i></div>
-					<label for="cardChk1" class="inner">
-						<div class="card_info_tbl">
-							<div class="img"><img src="../../img/temp/card_228_144.png" alt="NH올원(SHOPPING&11번가)카드(R1타입)"></div>
-							<div>
-								<div class="tit">NH올원(SHOPPING&11번가)카드(R1타입)</div>
-								<div class="sub">9411-****-****-3136</div>
+			<div class="list_ty1">
+				<ul>
+					<li>
+						<div class="checkbox large"><input type="radio" id="cardChk1" name="cardChk" checked><i aria-hidden="true"></i></div>
+						<label for="cardChk1" class="inner">
+							<div class="card_info_tbl">
+								<div class="img"><img src="../../img/temp/card_228_144.png" alt="NH올원(SHOPPING&11번가)카드(R1타입)"></div>
+								<div>
+									<div class="tit">NH올원(SHOPPING&11번가)카드(R1타입)</div>
+									<div class="sub">9411-****-****-3136</div>
+								</div>
 							</div>
-						</div>
-					</label>
-				</li>
-				<li>
-					<div class="checkbox large"><input type="radio" id="cardChk2" name="cardChk"><i aria-hidden="true"></i></div>
-					<label for="cardChk2" class="inner">
-						<div class="card_info_tbl">
-							<div class="img"><img src="../../img/temp/card_228_144.png" alt="NH올원(SHOPPING&11번가)카드(R1타입)"></div>
-							<div>
-								<div class="tit">NH올원(SHOPPING&11번가)카드(R1타입)</div>
-								<div class="sub">9411-****-****-3136</div>
+						</label>
+					</li>
+					<li>
+						<div class="checkbox large"><input type="radio" id="cardChk2" name="cardChk"><i aria-hidden="true"></i></div>
+						<label for="cardChk2" class="inner">
+							<div class="card_info_tbl">
+								<div class="img"><img src="../../img/temp/card_228_144.png" alt="NH올원(SHOPPING&11번가)카드(R1타입)"></div>
+								<div>
+									<div class="tit">NH올원(SHOPPING&11번가)카드(R1타입)</div>
+									<div class="sub">9411-****-****-3136</div>
+								</div>
 							</div>
-						</div>
-					</label>
-				</li>
-				<li>
-					<div class="checkbox large"><input type="radio" id="cardChk3" name="cardChk"><i aria-hidden="true"></i></div>
-					<label for="cardChk3" class="inner">
-						<div class="card_info_tbl">
-							<div class="img"><img src="../../img/temp/card_228_144.png" alt="NH올원(SHOPPING&11번가)카드(R1타입)"></div>
-							<div>
-								<div class="tit">NH올원(SHOPPING&11번가)카드(R1타입)</div>
-								<div class="sub">9411-****-****-3136</div>
+						</label>
+					</li>
+					<li>
+						<div class="checkbox large"><input type="radio" id="cardChk3" name="cardChk"><i aria-hidden="true"></i></div>
+						<label for="cardChk3" class="inner">
+							<div class="card_info_tbl">
+								<div class="img"><img src="../../img/temp/card_228_144.png" alt="NH올원(SHOPPING&11번가)카드(R1타입)"></div>
+								<div>
+									<div class="tit">NH올원(SHOPPING&11번가)카드(R1타입)</div>
+									<div class="sub">9411-****-****-3136</div>
+								</div>
 							</div>
-						</div>
-					</label>
-				</li>
-			</ul>
+						</label>
+					</li>
+				</ul>
+			</div>
 
 			<div class="btn_wrap bottom_fixed">
 				<div class="flex">
