--- a/html/guide/guide_list.html
+++ b/html/guide/guide_list.html
@@ -116,54 +116,56 @@
 
 			<h2 class="gd__h1">리스트</h2>
 			<h3 class="gd__h2">list_ty1</h3>
-			<ul class="list_ty1">
-				<li>
-					<div class="checkbox large"><input type="checkbox" id="cardChk1"><i aria-hidden="true"></i></div>
-					<label for="cardChk1" class="inner">
-						<div class="card_info_tbl">
-							<div class="img"><img src="../../img/temp/card_228_144.png" alt="NH올원(SHOPPING&11번가)카드(R1타입)"></div>
-							<div>
-								<div class="tit">NH올원(SHOPPING&11번가)카드(R1타입)</div>
-								<div class="sub">9411-****-****-3136</div>
+			<div class="list_ty1">
+				<ul>
+					<li>
+						<div class="checkbox large"><input type="checkbox" id="cardChk1"><i aria-hidden="true"></i></div>
+						<label for="cardChk1" class="inner">
+							<div class="card_info_tbl">
+								<div class="img"><img src="../../img/temp/card_228_144.png" alt="NH올원(SHOPPING&11번가)카드(R1타입)"></div>
+								<div>
+									<div class="tit">NH올원(SHOPPING&11번가)카드(R1타입)</div>
+									<div class="sub">9411-****-****-3136</div>
+								</div>
+							</div>
+						</label>
+					</li>
+					<li>
+						<div class="checkbox large"><input type="checkbox" id="cardChk2"><i aria-hidden="true"></i></div>
+						<label for="cardChk2" class="inner">
+							<div class="card_info_tbl">
+								<div class="img"><img src="../../img/temp/card_228_144.png" alt="NH올원(SHOPPING&11번가)카드(R1타입)"></div>
+								<div>
+									<div class="tit">체크박스 있는 타입</div>
+									<div class="sub">9411-****-****-3136</div>
+								</div>
+							</div>
+						</label>
+					</li>
+					<li>
+						<div class="inner">
+							<div class="card_info_tbl">
+								<div class="img"><img src="../../img/temp/card_228_144.png" alt="NH올원(SHOPPING&11번가)카드(R1타입)"></div>
+								<div>
+									<div class="tit">NH올원(SHOPPING&11번가)카드(R1타입)</div>
+									<div class="sub">9411-****-****-3136</div>
+								</div>
 							</div>
 						</div>
-					</label>
-				</li>
-				<li>
-					<div class="checkbox large"><input type="checkbox" id="cardChk2"><i aria-hidden="true"></i></div>
-					<label for="cardChk2" class="inner">
-						<div class="card_info_tbl">
-							<div class="img"><img src="../../img/temp/card_228_144.png" alt="NH올원(SHOPPING&11번가)카드(R1타입)"></div>
-							<div>
-								<div class="tit">체크박스 있는 타입</div>
-								<div class="sub">9411-****-****-3136</div>
+					</li>
+					<li>
+						<div class="inner">
+							<div class="card_info_tbl">
+								<div class="img"><img src="../../img/temp/card_228_144.png" alt="NH올원(SHOPPING&11번가)카드(R1타입)"></div>
+								<div>
+									<div class="tit">체크박스 없는 타입</div>
+									<div class="sub">9411-****-****-3136</div>
+								</div>
 							</div>
 						</div>
-					</label>
-				</li>
-				<li>
-					<div class="inner">
-						<div class="card_info_tbl">
-							<div class="img"><img src="../../img/temp/card_228_144.png" alt="NH올원(SHOPPING&11번가)카드(R1타입)"></div>
-							<div>
-								<div class="tit">NH올원(SHOPPING&11번가)카드(R1타입)</div>
-								<div class="sub">9411-****-****-3136</div>
-							</div>
-						</div>
-					</div>
-				</li>
-				<li>
-					<div class="inner">
-						<div class="card_info_tbl">
-							<div class="img"><img src="../../img/temp/card_228_144.png" alt="NH올원(SHOPPING&11번가)카드(R1타입)"></div>
-							<div>
-								<div class="tit">체크박스 없는 타입</div>
-								<div class="sub">9411-****-****-3136</div>
-							</div>
-						</div>
-					</div>
-				</li>
-			</ul>
+					</li>
+				</ul>
+			</div>
 		</div>
 	</section>
 </div>
