공지사항 리스트

--- a/html/guide/guide_list.html
+++ b/html/guide/guide_list.html
@@ -115,8 +115,8 @@
 			</div>
 
 			<h2 class="gd__h1">리스트</h2>
-			<h3 class="gd__h2">list_ty1</h3>
-			<div class="list_ty1">
+			<h3 class="gd__h2">line_list_1</h3>
+			<div class="line_list_1">
 				<ul>
 					<li>
 						<div class="checkbox large"><input type="checkbox" id="cardChk1"><i aria-hidden="true"></i></div>
