--- a/html/cs/CS_CB_50_10_01.html
+++ b/html/cs/CS_CB_50_10_01.html
@@ -41,7 +41,7 @@
 				</table>
 			</div>
 			<h2 class="tit_h2">결제카드 선택</h2>
-			<div class="list_ty1">
+			<div class="line_list_1">
 				<ul>
 					<li>
 						<div class="checkbox large"><input type="radio" id="cardChk1" name="cardChk" checked><i aria-hidden="true"></i></div>
