--- a/html/cs/CS_NT_10_10_01.html
+++ b/html/cs/CS_NT_10_10_01.html
@@ -16,16 +16,40 @@
 <div id="container">
 	<section id="contents">
 		<div class="section">
-			<div class="list_ty2 first">
+			<div class="line_list_2 first">
 				<ul>
-					<li>
-						<a href="#" class="inner">
-							<div class="tit">올원페이-모바일티머니 관련 안내</div>
+					<li class="bg_noti">
+						<a href="#" class="inner btn_click">
+							<div class="tit"><strong class="txt_noti">[공지]</strong>올원페이-모바일티머니 관련 안내<i class="ico_new"><span class="blind">새글</span></i></div>
+							<div class="date">20.03.06</div>
+						</a>
+					</li>
+					<li class="bg_noti">
+						<a href="#" class="inner btn_click">
+							<div class="tit"><strong class="txt_noti">[공지]</strong>올원페이-모바일티머니 관련 안내 올원페이-모바일티머니 관련 안내 올원페이-모바일티머니 관련 안내 올원페이-모바일티머니 관련 안내</div>
+							<div class="date">20.03.06</div>
+						</a>
+					</li>
+					<li class="bg_noti">
+						<a href="#" class="inner btn_click">
+							<div class="tit"><strong class="txt_noti">[공지]</strong>올원페이-모바일티머니 관련 안내 올원페이-모바일티머니 관련 안내 올원페이-모바일티머니 관련 안내 올원페이-모바일티머니 관련 안내</div>
 							<div class="date">20.03.06</div>
 						</a>
 					</li>
 					<li>
-						<a href="#" class="inner">
+						<a href="#" class="inner btn_click">
+							<div class="tit">올원페이-모바일티머니 관련 안내 올원페이-모바일티머니 관련 안내<i class="ico_new"><span class="blind">새글</span></i></div>
+							<div class="date">20.03.06</div>
+						</a>
+					</li>
+					<li>
+						<a href="#" class="inner btn_click">
+							<div class="tit">올원페이-모바일티머니 관련 안내 올원페이-모바일티머니 관련 안내 올원페이-모바일티머니 관련 안내 올원페이-모바일티머니 관련 안내<i class="ico_new"><span class="blind">새글</span></i></div>
+							<div class="date">20.03.06</div>
+						</a>
+					</li>
+					<li>
+						<a href="#" class="inner btn_click">
 							<div class="tit">올원페이-모바일티머니 관련 안내 올원페이-모바일티머니 관련 안내 올원페이-모바일티머니 관련 안내 올원페이-모바일티머니 관련 안내</div>
 							<div class="date">20.03.06</div>
 						</a>
