현황판 공지사항 표기

--- a/html/guide.html
+++ b/html/guide.html
@@ -1005,6 +1005,36 @@
 								</tr>
 								<tr>
 									<td class="no"></td>
+									<td class="id"><a target="_blank" href="cs/CS_NT_10_10_01.html">CS_NT_10_10_01.html</a></td>
+									<td>V</td>
+									<td>공지사항</td>
+									<td>리스트</td>
+									<td></td>
+									<td></td>
+									<td></td>
+									<td class="name">공지사항 리스트</td>
+									<td class="worker">안효주</td>
+									<td class="c_date">2020-05-04</td>
+									<td class="m_date"></td>
+									<td class="etc"></td>
+								</tr>
+								<tr>
+									<td class="no"></td>
+									<td class="id"><a target="_blank" href="cs/CS_NT_10_10_03.html">CS_NT_10_10_03.html</a></td>
+									<td>V</td>
+									<td></td>
+									<td>상세</td>
+									<td></td>
+									<td></td>
+									<td></td>
+									<td class="name">공지사항 상세</td>
+									<td class="worker">고지은</td>
+									<td class="c_date"></td>
+									<td class="m_date"></td>
+									<td class="etc"></td>
+								</tr>
+								<tr>
+									<td class="no"></td>
 									<td class="id"><a target="_blank" href="cs/CS_CB_20_10_01.html">CS_CB_20_10_01.html</a></td>
 									<td>V</td>
 									<td>카드본인확인 서비스</td>
