공지사항 상세페이지 수정

--- a/content/html/cs/CS_NT_10_10_03.html
+++ b/content/html/cs/CS_NT_10_10_03.html
@@ -47,7 +47,7 @@
                             </li>
                         </ul>
                     </div>
-                    <img src="../../images/temp/.jpg" alt="">
+                    <img src="../../images/temp/imgbox.jpg" alt="">
                     <div class="table">
                         <table>
                             <caption>테이블제목</caption>
