공지사항 상세 수정

--- a/html/cs/CS_NT_10_10_03.html
+++ b/html/cs/CS_NT_10_10_03.html
@@ -25,7 +25,7 @@
                     <div class="info">첨부파일 1 : <a href="#" role="button"><span>파일명 text11</span><span class="btn_download">파일명 text11 다운로드</span></a></div>
                     <div class="info">첨부파일 2 : <a href="#" role="button"><span>파일명 text22</span><span class="btn_download">파일명 text22 다운로드</span></a></div>
                 </div>
-                <div class="txt_box_content">
+                <article class="txt_box_content">
                     <h2>Title</h2>
                     <h3>Sub Title</h3>
                     <p>texttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttext</p>
@@ -47,7 +47,7 @@
                             </li>
                         </ul>
                     </div>
-                    <img src="../../images/temp/imgbox.jpg" alt="">
+                    <img src="../../img/temp/imgbox.jpg" alt="">
                     <div class="table">
                         <table>
                             <caption>테이블제목</caption>
@@ -81,7 +81,7 @@
                             </tbody>
                         </table>
                     </div>
-                </div>
+                </article>
             </div>
 			<div class="btn_wrap bottom_fixed">
 				<div class="flex">
