--- a/html/guide.html
+++ b/html/guide.html
@@ -1029,7 +1029,7 @@
 									<td></td>
 									<td class="name">공지사항 상세</td>
 									<td class="worker">고지은</td>
-									<td class="c_date"></td>
+									<td class="c_date">2020-05-04</td>
 									<td class="m_date"></td>
 									<td class="etc"></td>
 								</tr>
