폴더명 변경

--- a/html/guide.html
+++ b/html/guide.html
@@ -1005,7 +1005,7 @@
 								</tr>
 								<tr>
 									<td class="no"></td>
-									<td class="id"><a target="_blank" href="cs/CS_NT_10_10_01.html">CS_NT_10_10_01.html</a></td>
+									<td class="id"><a target="_blank" href="CS/CS_NT_10_10_01.html">CS_NT_10_10_01.html</a></td>
 									<td>V</td>
 									<td>공지사항</td>
 									<td>리스트</td>
@@ -1020,7 +1020,7 @@
 								</tr>
 								<tr>
 									<td class="no"></td>
-									<td class="id"><a target="_blank" href="cs/CS_NT_10_10_03.html">CS_NT_10_10_03.html</a></td>
+									<td class="id"><a target="_blank" href="CS/CS_NT_10_10_03.html">CS_NT_10_10_03.html</a></td>
 									<td>V</td>
 									<td></td>
 									<td>상세</td>
@@ -1035,7 +1035,7 @@
 								</tr>
 								<tr>
 									<td class="no"></td>
-									<td class="id"><a target="_blank" href="cs/CS_CB_20_10_01.html">CS_CB_20_10_01.html</a></td>
+									<td class="id"><a target="_blank" href="CS/CS_CB_20_10_01.html">CS_CB_20_10_01.html</a></td>
 									<td>V</td>
 									<td>카드본인확인 서비스</td>
 									<td></td>
@@ -1050,7 +1050,7 @@
 								</tr>
 								<tr>
 									<td class="no"></td>
-									<td class="id"><a target="_blank" href="cs/CS_CB_20_20_01.html">CS_CB_20_20_01.html</a></td>
+									<td class="id"><a target="_blank" href="CS/CS_CB_20_20_01.html">CS_CB_20_20_01.html</a></td>
 									<td>V</td>
 									<td></td>
 									<td></td>
@@ -1065,7 +1065,7 @@
 								</tr>
 								<tr>
 									<td class="no"></td>
-									<td class="id"><a target="_blank" href="cs/CS_CB_20_30_01.html">CS_CB_20_30_01.html</a></td>
+									<td class="id"><a target="_blank" href="CS/CS_CB_20_30_01.html">CS_CB_20_30_01.html</a></td>
 									<td>V</td>
 									<td></td>
 									<td></td>
@@ -1080,7 +1080,7 @@
 								</tr>
 								<tr>
 									<td class="no"></td>
-									<td class="id"><a target="_blank" href="cs/CS_CB_20_30_02.html">CS_CB_20_30_02.html</a></td>
+									<td class="id"><a target="_blank" href="CS/CS_CB_20_30_02.html">CS_CB_20_30_02.html</a></td>
 									<td>V</td>
 									<td></td>
 									<td></td>
@@ -1095,7 +1095,7 @@
 								</tr>
 								<tr>
 									<td class="no"></td>
-									<td class="id"><a target="_blank" href="cs/CS_CB_30_10_01.html">CS_CB_30_10_01.html</a></td>
+									<td class="id"><a target="_blank" href="CS/CS_CB_30_10_01.html">CS_CB_30_10_01.html</a></td>
 									<td>V</td>
 									<td></td>
 									<td></td>
@@ -1110,7 +1110,7 @@
 								</tr>
 								<tr>
 									<td class="no"></td>
-									<td class="id"><a target="_blank" href="cs/CS_CB_30_20_01.html">CS_CB_30_20_01.html</a></td>
+									<td class="id"><a target="_blank" href="CS/CS_CB_30_20_01.html">CS_CB_30_20_01.html</a></td>
 									<td>V</td>
 									<td></td>
 									<td></td>
@@ -1125,7 +1125,7 @@
 								</tr>
 								<tr>
 									<td class="no"></td>
-									<td class="id"><a target="_blank" href="cs/CS_CB_40_10_01.html">CS_CB_40_10_01.html</a></td>
+									<td class="id"><a target="_blank" href="CS/CS_CB_40_10_01.html">CS_CB_40_10_01.html</a></td>
 									<td>V</td>
 									<td></td>
 									<td></td>
@@ -1140,7 +1140,7 @@
 								</tr>
 								<tr>
 									<td class="no"></td>
-									<td class="id"><a target="_blank" href="cs/CS_CB_40_20_01.html">CS_CB_40_20_01.html</a></td>
+									<td class="id"><a target="_blank" href="CS/CS_CB_40_20_01.html">CS_CB_40_20_01.html</a></td>
 									<td>V</td>
 									<td></td>
 									<td></td>
@@ -1155,7 +1155,7 @@
 								</tr>
 								<tr>
 									<td class="no"></td>
-									<td class="id"><a target="_blank" href="cs/CS_CB_50_10_01.html">CS_CB_50_10_01.html</a></td>
+									<td class="id"><a target="_blank" href="CS/CS_CB_50_10_01.html">CS_CB_50_10_01.html</a></td>
 									<td>V</td>
 									<td></td>
 									<td></td>
@@ -1170,7 +1170,7 @@
 								</tr>
 								<tr>
 									<td class="no"></td>
-									<td class="id"><a target="_blank" href="cs/CS_CB_50_30_01.html">CS_CB_50_30_01.html</a></td>
+									<td class="id"><a target="_blank" href="CS/CS_CB_50_30_01.html">CS_CB_50_30_01.html</a></td>
 									<td>V</td>
 									<td></td>
 									<td></td>
