--- a/html/CS/CS_CB_20_10_01.html
+++ b/html/CS/CS_CB_20_10_01.html
@@ -16,7 +16,7 @@
 <div id="container">
 	<section id="contents">
 		<div class="section">
-			<div class="service_info">
+			<div class="ico_box_wrap">
 				<i class="i_ico_88 ico_1" aria-hidden="true"></i>
 				<p class="txt">웹사이트 및 앱에서 본인 명의의<br />신용/체크카드 정보를 통해 본인임을<br />확인하는 서비스입니다.</p>
 			</div>
