--- a/html/CS/CS_CB_40_10_01.html
+++ b/html/CS/CS_CB_40_10_01.html
@@ -17,7 +17,7 @@
 	<section id="contents">
 		<div class="section">
 			<h2 class="tit_h2">카드본인확인 서비스 해지</h2>
-			<div class="service_info mt10">
+			<div class="ico_box_wrap mt10">
 				<i class="i_ico_88 ico_2" aria-hidden="true"></i>
 				<p class="txt">카드본인확인 서비스를 해지하시면<br />간편인증(올원페이) 서비스를<br />이용하실 수 없습니다.<br /><br />그래도 해지 하시겠습니까?</p>
 			</div>
